test_case/rust-lang_rust/43408_381369071.rs
rust
// error: T: Sized is not satisfied
fn to_byte_array<T>() -> [u8; T::SIZE] {
    panic!()
}
